welcome.lessons.welcome.bat.bool2.LessBy10.scala.code
def lessBy10(a:Int, b:Int, c:Int):Boolean = {
  if (Math.min(a,b,c)<a-10) {
    return true
  }
   if (Math.min(a,b,c)<b-10) {
    return true
  }
   if (Math.min(a,b,c)<c-10) {
    return true
  }
  return false }